Fix swipe animations: remove card stack transitions and uniform card sizing - Remove transition animations between card stack positions - Eliminate 'falling back' effect when cards change positions - Remove scaling effects (scale(0.95), scale(0.9)) from middle and back cards - All cards now maintain uniform size throughout the swipe flow - Cards instantly snap to new positions when deck order changes - Only the actively swiped card animates off screen

--- a/src/components/SwipeCard/SwipeCard.module.scss
+++ b/src/components/SwipeCard/SwipeCard.module.scss
@@ -3,6 +3,7 @@
   height: 100%;
   position: relative;
   cursor: grab;
+  transition: none !important;
   
   &.active {
     cursor: grab;
